OPTIMIZATION: Remove css.css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,10 @@
-<!--
-Author: WebThemez
-Author URL: http://webthemez.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
-Note: Please use our back link in your site (webthemez.com)
--->
 <!DOCTYPE html>
 <!--[if lt IE 7 ]> <html lang="en" class="ie ie6"> <![endif]-->
 <!--[if IE 7 ]>	<html lang="en" class="ie ie7"> <![endif]-->
 <!--[if IE 8 ]>	<html lang="en" class="ie ie8"> <![endif]-->
 <!--[if IE 9 ]>	<html lang="en" class="ie ie9"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en"><!--<![endif]--><head>
+<html lang="id"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title><%= site.slogan; %> | <%= site.title; %></title>
@@ -24,13 +17,10 @@ Note: Please use our back link in your site (webthemez.com)
 <meta property="og:title" content="<%= site.slogan; %> | <%= site.title; %>">
 <meta property="og:description" content="<%= site.description; %>">
 <meta property="og:image" content="<%= site.url; %>/images/xplooor_socmed_image.jpg">
-
-<link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/css.css"> 
 <link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/bootstrap.min.css"> 
 <link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="icon">
 <link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="shortcut icon">
 <link rel="stylesheet" type="text/css" href="<%= site.static_host %>/stylesheets/home_styles.css">
-<!--<script src="<%= site.static_host %>/javascripts/analytics.js" async=""></script>-->
 <script type="text/javascript">var static_host = "<%= site.static_host %>";</script>
 </head>
 
