--- a/views/partials/layout_header.ejs
+++ b/views/partials/layout_header.ejs
@@ -28,6 +28,7 @@
     <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/bootstrap.min.css' />
     <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/flat-ui.min.css' />
     <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/1-col-portfolio.css' />
+    <link rel='stylesheet' href='<%= site.static_host %>/stylesheets/one-page-wonder.css' />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
