--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -2,7 +2,8 @@
 <% include ../partials/layout_navigation %>
 
 <% include ../helpers/functions.ejs %>
-        
+    <!-- Page Content -->
+    <div class="container">        
         <div class="row">
             <div class="col-md-12">
                 <ol class="breadcrumb">
