--- a/public/stylesheets/1-col-portfolio.css
+++ b/public/stylesheets/1-col-portfolio.css
@@ -39,3 +39,14 @@ p {font-size:100%;}
 .navbar-toggle {background-color: #34495e !important;}
 .navbar-toggle:focus {background-color: transparent !important;}
 .navbar-inverse .navbar-collapse {border-top:1px solid #eee !important;}
+.lead {font-size:20px;}
+.featurette-center {margin-top:120px;}
+@media(max-width:768px) {
+	.featurette-center {margin-top:10px;clear:both;}
+	.pull-center-mobile {float: none !important;margin:0 auto;}
+}
+@media (max-width: 991px) {
+	.pull-center-mobile {float: none !important;margin:0 auto !important;max-width: 100% !important;}
+}
+.breadcrumb-wrapper {background-color:#f5f5f5}
+.breadcrumb-wrapper .breadcrumb {margin-bottom: 0px;}
