--- a/views/about_us.ejs
+++ b/views/about_us.ejs
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Full Width Image Header -->
-    <header class="header-image" style="background: url('<%= site.static_host %>/images/tentang-kami-xplooor.com.jpg') no-repeat center center scroll">
+    <header class="header-image" style="background: url('<%= site.static_host %>/images/tentang-kami-xplooor.com.jpg') no-repeat center center scroll;background-size:cover;">
         <div class="headline">
             <div class="container">
                 <h1><%= title %></h1>
