--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -66,7 +66,7 @@
                             <h3 class="list-title"><%= web_pages.documents[i].title; %></h3>
                             <h4 class="list-sub-title"><%= web_pages.documents[i].price; %></h4>
                             <p><%= web_pages.documents[i].description; %></p>
-                            <a title="Lihat paket wisata lebih lengkap" class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" rel="nofollow" target="_blank">Buka Situs</a>
+                            <a title="Lihat paket wisata lebih lengkap" class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" rel="nofollow" target="_blank">Detail Paket Wisata</a>
                         </div>
                     </div>
                 </div>
