SEO: Add pencarian populer

--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -38,6 +38,15 @@
                 
             </div><!-- /input-group -->
             </form>
+<div style="margin-top:10px" class="row">
+  <div class="col-md-12"><span style="font-size: 16px;">Pencarian Populer</span></div>
+</div>
+<div class="row">
+	<div class="col-md-3"><a href="/paket-wisata/open-trip">Open Trip</a></div>
+	<div class="col-md-3"><a href="/paket-wisata/murah">Murah</a></div>
+	<div class="col-md-3"><a href="/paket-wisata/honeymoon">Honeymoon</a></div>
+	<div class="col-md-3"><a href="/paket-wisata/promo">Promo</a></div>
+</div>
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         <!-- /.row -->
