SEO: Add pencarian populer to SERP page

--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -38,15 +38,22 @@
                 
             </div><!-- /input-group -->
             </form>
-<div style="margin-top:10px" class="row">
-  <div class="col-md-12"><span style="font-size: 16px;">Pencarian Populer</span></div>
-</div>
-<div class="row">
-	<div class="col-md-3"><a href="/paket-wisata/open-trip">Open Trip</a></div>
-	<div class="col-md-3"><a href="/paket-wisata/murah">Murah</a></div>
-	<div class="col-md-3"><a href="/paket-wisata/honeymoon">Honeymoon</a></div>
-	<div class="col-md-3"><a href="/paket-wisata/promo">Promo</a></div>
-</div>
+            <style type="text/css">.popular-search {margin-bottom:10px;}</style>
+            <div class="row" style="margin:30px 0px;">
+                <div class="col-md-3">
+                    <span style="font-size: 18px;">Pencarian Populer</span>
+                </div>
+                <div class="col-md-9">
+                    <div class="row" style="border-left:3px solid #ccc;">
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/open-trip">Open Trip</a></div>
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/murah">Murah</a></div>
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/honeymoon">Honeymoon</a></div>
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/promo">Promo</a></div>
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/adventure">Adventure</a></div>
+                        <div class="col-md-3 popular-search"><a href="/paket-wisata/backpacker">Backpacker</a></div><div class="col-md-3 popular-search"><a href="/paket-wisata/bangkok">Bangkok</a></div><div class="col-md-3 popular-search"><a href="/paket-wisata/rafting">Rafting</a></div>
+                    </div>
+                </div>
+            </div>
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         <!-- /.row -->
