--- a/public/stylesheets/1-col-portfolio.css
+++ b/public/stylesheets/1-col-portfolio.css
@@ -30,6 +30,9 @@ p {font-size:100%;}
 	.list-title {margin-top: 20px;line-height: 30px;}
 	.sidebar {float:none;margin: 0 auto;}
 }
+.popular-search-wrapper {margin:30px 0px;}
+.popular-search-header {font-size: 18px;margin:0px 0px 15px -15px;display: block;}
+.popular-search-items {border-left:3px solid #ccc;}
 
 .navbar {margin-bottom:0 !important;}
 .breadcrumb {border-radius:0 !important;}
