--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -39,12 +39,12 @@
             </div><!-- /input-group -->
             </form>
             <style type="text/css">.popular-search {margin-bottom:10px;}</style>
-            <div class="row" style="margin:30px 0px;">
+            <div class="row popular-search-wrapper">
                 <div class="col-md-3">
-                    <span style="font-size: 18px;">Pencarian Populer</span>
+                    <span class="popular-search-header">Pencarian Populer</span>
                 </div>
                 <div class="col-md-9">
-                    <div class="row" style="border-left:3px solid #ccc;">
+                    <div class="row popular-search-items">
                         <div class="col-md-3 popular-search"><a href="/paket-wisata/open-trip">Open Trip</a></div>
                         <div class="col-md-3 popular-search"><a href="/paket-wisata/murah">Murah</a></div>
                         <div class="col-md-3 popular-search"><a href="/paket-wisata/honeymoon">Honeymoon</a></div>
