DESIGN: Update serp style

--- a/views/partials/layout_footer.ejs
+++ b/views/partials/layout_footer.ejs
@@ -1,3 +1,5 @@
+    <div class="footer-wrapper">
+      <div class="container">
         <!-- Footer -->
         <footer class="no-bg-color">
             <div class="row">
@@ -7,7 +9,7 @@
             </div>
             <!-- /.row -->
         </footer>
-
+      </div>
     </div>
     <!-- /.container -->
 <script async type="text/javascript" src="<%= site.static_host %>/javascripts/jquery-1.js"></script>
