--- a/public/stylesheets/1-col-portfolio.css
+++ b/public/stylesheets/1-col-portfolio.css
@@ -53,3 +53,18 @@ p {font-size:100%;}
 }
 .breadcrumb-wrapper {background-color:#f5f5f5}
 .breadcrumb-wrapper .breadcrumb {margin-bottom: 0px;}
+.popular-search{margin-bottom:10px}
+.list {
+    background-color: #FFF;
+    padding: 20px 10px;
+    border: 1px solid #EFEFEF;
+    box-shadow: 1px 2px 2px #DDD;
+}
+.search-wrapper {
+    background-color: #FFF;
+    border-bottom: 1px solid #dedede;
+    box-shadow: 1px 2px 2px #DDD;
+}
+.result-wrapper {padding-top:20px;background-color: #F5F5F5;}
+.footer-wrapper {border-top: 1px solid #dedede;}
+.image-wrapper {width:165px;height:110px;overflow:hidden;}
