--- a/views/partials/layout_footer.ejs
+++ b/views/partials/layout_footer.ejs
@@ -4,7 +4,7 @@
         <footer class="no-bg-color">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy;2015 <a href="<%= site.url; %>"><%= site.title; %></a></p>
+                    <p>Copyright &copy;2015 <a href="<%= site.url; %>"><%= site.title; %></a> <%= site.slogan; %></p>
                 </div>
             </div>
             <!-- /.row -->
