--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -56,6 +56,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="list-header">Daftar paket wisata<%= (q&&' '+q || '' ); %></h2>
+                    <span class="search-result">(sekitar <%= web_pages.totalPages*10 %> hasil pencarian)</span>
                 </div>
             </div>
         </div>
