--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,10 +47,12 @@
 			<div class="wrapper">
 				<h1><%= site.title; %></h1>	
 				<h2 class="intro site-desc">Selamat datang di <span>XplOOor</span>. <%= site.description; %></h2>
-				<center>
-					<a href="/paket-wisata" class="button learn-more orange-btn">Cari</a> atau 
-					<a href="#subscribe" id="sync" class="scroll button learn-more orange-btn">Telusuri</a>
-				</center>
+			</div>
+		</div>
+		<div class="header-bottom">
+			<div class="actionable-container">
+				<a href="/paket-wisata" class="button learn-more orange-btn">Cari</a> atau 
+				<a href="#subscribe" id="sync" class="scroll button learn-more orange-btn">Telusuri</a>
 			</div>
 		</div>
 	</div>
