--- a/public/stylesheets/home_styles.css
+++ b/public/stylesheets/home_styles.css
@@ -84,7 +84,16 @@ position: relative;
 line-height: 110px;
 z-index: 1;
 }
+.header-bottom {position:absolute;bottom:0;left:0;width:100%;background-color:#222222;border-top:5px solid orangered;}
+.actionable-container {
+    padding: 0px;
+    line-height: normal;
+    text-align: center;
+}
+.actionable-container a {margin:15px 0px !important;}
+
 .wide-screen {width:100%;height:100%;}
+.header-bottom .button, .header-bottom .button:visited,
 .wrapper .button, .wrapper .button:visited {
     background: none repeat scroll 0 0 #11ABB0;
     border: medium none;
