--- a/views/partials/layout_header_detail.ejs
+++ b/views/partials/layout_header_detail.ejs
@@ -7,19 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mau jalan jalan, dapatkan penawaran harga terbaik paket wisata<%= (q&&' '+q || '' ); %> untuk tour travel liburan murah meriah hanya di XplOOor.com<%= current_page(web_pages.prevPage,web_pages.nextPage) %>">
+    <meta name="description" content="<%= detail.description %>">
     <meta name="author" content="">
 
-   <title>Harga Paket Wisata <%= (q&&q.replace(/\b./g, function(m){ return m.toUpperCase(); }) || '' ); %><%= current_page(web_pages.prevPage,web_pages.nextPage) %> | <%= site.title; %></title>
-    <% if(canonical) { %>
-        <meta name="canonical" href="<%= canonical %>">
-    <% } %>
-    <% if (web_pages.prevPage) { %>
-        <link rel="prev" href="<%= site.url %>/paket-wisata<%= (q&&'/'+slugify(q) || '' ); %><%= ( web_pages.prevPage>1&&'?page='+web_pages.prevPage||'' ) %>" />
-    <% } %>
-    <% if( web_pages.nextPage ) { %>
-        <link rel="next" href="<%= site.url %>/paket-wisata<%= (q&&'/'+slugify(q) || '' ); %>?page=<%= web_pages.nextPage %>" />
-    <% } %>
+   <title><%= detail.title %> | <%= site.title %></title>
     <link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="icon">
     <link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="shortcut icon">
 
