FIX: Link to detail page

--- a/views/web_pages/index.ejs
+++ b/views/web_pages/index.ejs
@@ -85,7 +85,7 @@
                             <h4 class="list-sub-title"><%= web_pages.documents[i].price; %></h4>
                             <p><%= web_pages.documents[i].description; %></p>
                             <% if (web_pages.documents[i].situs && web_pages.documents[i].slug) { %>
-                                <a title="Lihat paket wisata lebih lengkap" class="btn btn-primary" href="<%= web_pages.documents[i].situs; %>/<%= web_pages.documents[i].slug; %>">Detail Paket Wisata</a>
+                                <a title="Lihat paket wisata lebih lengkap" class="btn btn-primary" href="/<%= web_pages.documents[i].situs; %>/<%= web_pages.documents[i].slug; %>">Detail Paket Wisata</a>
                             <% }else { %>
                                 <a title="Lihat paket wisata lebih lengkap" class="btn btn-primary" href="<%= web_pages.documents[i].url; %>" rel="nofollow" target="_blank">Detail Paket Wisata</a>
                             <% } %>
