--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
 <div id="overlay"></div>
 -->
 	<script async type="text/javascript" src="<%= site.static_host %>/javascripts/jquery-1.js"></script>
-	<footer class="blacken">Created by <a href="/" target="_blank"><%= site.title; %></a> Background by <a href="https://pixabay.com" target="_blank" rel="nofollow">pixabay</a></footer>
+	<footer class="blacken">Copyright &copy;2015 <a href="/" target="_blank"><%= site.title; %></a> Background by <a href="https://pixabay.com" target="_blank" rel="nofollow">pixabay</a> <%= site.slogan; %></footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
