--- a/views/partials/layout_header_detail.ejs
+++ b/views/partials/layout_header_detail.ejs
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="<%= detail.description %>">
-    <meta name="author" content="">
+    <meta name="robots" content="noindex, follow">
 
    <title><%= detail.title %> | <%= site.title %></title>
     <link href="<%= site.static_host %>/favicon.ico?v=1" type="image/x-icon" rel="icon">
